--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "1.0.0",
   "description": "Does Blockchain Stuff for Discord",
   "main": "main.js",
+  "entry point": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
   },
   "author": "Joe Strusz",
   "license": "CC-BY-NC-SA-4.0",
+  "bin": {
+    "cli": "./main.js"
+  },
   "dependencies": {
     "bufferutil": "^3.0.3",
     "cheerio": "^1.0.0-rc.2",
     "child_process": "^1.0.2",
     "cluster": "^0.7.7",
+    "co": "^4.6.0",
+    "co-prompt": "^1.0.0",
+    "commander": "^2.16.0",
     "discord.js": "11.3.0",
     "ejs": "^2.5.6",
     "erlpack": "^0.1.2",
